Update manifest.json: button in calendar space
Just a suggestion to make the button appear in the right place, i.e. on the calendar page.
Best regards,
DenB

--- a/manifest.json
+++ b/manifest.json
@@ -27,7 +27,8 @@
 
   "browser_action": {
     "default_icon": "icons/icon.png",
-    "default_title": "Open Multimonth"
+    "default_title": "Open Multimonth",
+    "allowed_spaces": ["calendar"]
   },
 
   "experiment_apis": {
